# ink-log

./: .gitignore  Cargo.toml  README.md
contract/: Cargo.toml
contract/src/: lib.rs  log.rs  macros.rs  off_chain.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: lib.rs  log.rs  macros.rs  off_chain.rs  tests.rs
