[package]
name = "ink_log"
version = "0.1.0"
authors = ["zhangtailin <tailinzhang1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_env = { version = "3.0.0-rc2", path = "../../crates/env", default-features = false, features = ["ink-unstable-chain-extensions"]}
ink_prelude = { version = "3.0.0-rc2", path = "../../crates/prelude", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"] }
log = { version = "0.4" }
cfg-if = "1.0"

# Log print for the off-chain environment.
chrono = { version = "0.4", optional = true }
colored = { version = "^1.6", optional = true }

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_prelude/std",
    "scale/std",
    # Enables log color crates for off-chain environment.
    "log/std",
    "chrono",
    "colored",
]
