[package]
name = "ink_log"
version = "0.1.0"
authors = ["zhangtailin <tailinzhang1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive", "full"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }
log = { version = "0.4" }

# Log print for the off-chain environment.
chrono = { version = "0.4", optional = true }
colored = { version = "^1.6", optional = true }

# patch
funty = "=1.1"

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_env/ink-debug",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    # Enables log color crates for off-chain environment.
    "log/std",
    "chrono",
    "colored",
]
ink-log-chain-extensions = []
