[package]
name = "runtime_log"
version = "0.1.0"
authors = ["zhangtailin <tailinzhang1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", features = ["derive"], default-features = false }

frame-support = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

pallet-contracts = { version = "2.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "pallet-contracts/std",
]
