[package]
name = "runtime-log"
version = "0.1.1"
authors = ["zhangtailin <tailinzhang1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"], default-features = false }

frame-support = { version = "3.0.0", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

pallet-contracts = { version = "3.0.0", git = "https://github.com/patractlabs/substrate", branch = "patract-contracts", default-features = false }

# patch
funty = "=1.1"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "pallet-contracts/std",
]
