[package]
name = "runtime-log"
version = "0.1.1"
authors = ["zhangtailin <tailinzhang1993@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { version = "2.0.0", package = "parity-scale-codec" }

frame-support = "3.0.0"

pallet-contracts = "3.0.0"

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "pallet-contracts/std",
]
